# FPGAandCNN

./: LICENSE  README.md  README_QUARTUS.md
DigitalRecognition/: README.md  README_QUARTUS.md
DigitalRecognition/hardware/PMOD_OV7670/: PMOD_OV7670.pcbdoc  PMOD_OV7670.schdoc
DigitalRecognition/verilog/code/synt/greybox_tmp/: cbx_args.txt
DigitalRecognition/verilog/imp/: PLLJ_PLLSPE_INFO.txt  cam_proj.qsf  cam_proj.qws  cam_proj_BAK.qsf
DigitalRecognition/verilog/imp/db/: add_sub_afh.tdf  add_sub_bfh.tdf  add_sub_kbh.tdf  add_sub_mbh.tdf  add_sub_nbh.tdf  alt_synch_pipe_1e8.tdf  alt_synch_pipe_2e8.tdf  alt_synch_pipe_3e8.tdf  alt_synch_pipe_4e8.tdf  altsyncram_70j1.tdf  cam_proj.(0).cnf.cdb  cam_proj.(100).cnf.cdb  cam_proj.(100).cnf.hdb  cam_proj.(101).cnf.hdb  cam_proj.(102).cnf.hdb  cam_proj.(103).cnf.hdb  cam_proj.(104).cnf.cdb  cam_proj.(107).cnf.cdb  cam_proj.(108).cnf.cdb  cam_proj.(108).cnf.hdb  cam_proj.(109).cnf.cdb  cam_proj.(11).cnf.cdb  cam_proj.(110).cnf.hdb  cam_proj.(112).cnf.cdb  cam_proj.(114).cnf.cdb  cam_proj.(116).cnf.cdb  cam_proj.(119).cnf.hdb  cam_proj.(15).cnf.cdb  cam_proj.(15).cnf.hdb  cam_proj.(18).cnf.hdb  cam_proj.(19).cnf.cdb  cam_proj.(2).cnf.hdb  cam_proj.(20).cnf.hdb  cam_proj.(21).cnf.cdb  cam_proj.(22).cnf.hdb  cam_proj.(25).cnf.hdb  cam_proj.(26).cnf.hdb  cam_proj.(27).cnf.hdb  cam_proj.(28).cnf.cdb  cam_proj.(28).cnf.hdb  (+124 more)
DigitalRecognition/verilog/imp/incremental_db/compiled_partitions/: cam_proj.root_partition.cmp.logdb  cam_proj.root_partition.map.cdb  cam_proj.root_partition.map.dpi  cam_proj.root_partition.map.hbdb.cdb  cam_proj.root_partition.map.hbdb.hb_info  cam_proj.root_partition.map.hbdb.hdb
DigitalRecognition/verilog/imp/output_files/: cam_proj.asm.rpt  cam_proj.eda.rpt  cam_proj.fit.summary  cam_proj.jdi  cam_proj.map.rpt  cam_proj.map.smsg  cam_proj.map.summary  cam_proj.pin  cam_proj.sta.summary
DigitalRecognition/verilog/imp/simulation/modelsim/: cam_proj.sft  cam_proj_modelsim.xrf
DnnKernelHLS/: CMakeLists.txt
DnnKernelHLS/host/: CMakeLists.txt  host_util.h  link_u200_template.ini  link_u50_template.ini  run_inference.cc
DnnKernelHLS/include/dnn-kernel/: conv2d.h  inference.h  linear.h  maxpool2d.h  relu.h
DnnKernelHLS/learning/: requirements.txt  train_mnist.py
DnnKernelHLS/tests/: CMakeLists.txt  util.h
DnnKernelHLS/tests/hls/: CMakeLists.txt  tb.tcl
DnnKernelHLS/tests/hls/conv2d/: CMakeLists.txt  conv2d_hls.cc  conv2d_hls.h  conv2d_test.cc
DnnKernelHLS/tests/hls/inference/: CMakeLists.txt  inference_hls.cc  inference_hls.h  inference_test.cc
DnnKernelHLS/tests/hls/linear/: CMakeLists.txt  linear_hls.cc  linear_hls.h  linear_test.cc
DnnKernelHLS/tests/hls/maxpool2d/: CMakeLists.txt  maxpool2d_hls.cc  maxpool2d_hls.h  maxpool2d_test.cc
DnnKernelHLS/tests/hls/relu/: CMakeLists.txt  relu_hls.cc  relu_hls.h  relu_test.cc
DnnKernelHLS/tests/ref/: CMakeLists.txt  conv2d.cc  inference.cc  linear.cc  maxpool2d.cc  relu.cc
verilog/imp/: cam_proj.qsf  cam_proj.qws  output_file.map
verilog/imp/db/: .cmp.kpt  a_gray2bin_9ib.tdf  a_graycounter_4lc.tdf  a_graycounter_877.tdf  add_sub_0dh.tdf  add_sub_2dh.tdf  altsyncram_e2e1.tdf  altsyncram_e801.tdf  altsyncram_im31.tdf  altsyncram_m2e1.tdf  altsyncram_otd1.tdf  cam_proj.(0).cnf.hdb  cam_proj.(1).cnf.cdb  cam_proj.(1).cnf.hdb  cam_proj.(10).cnf.cdb  cam_proj.(10).cnf.hdb  cam_proj.(101).cnf.cdb  cam_proj.(102).cnf.cdb  cam_proj.(103).cnf.cdb  cam_proj.(104).cnf.hdb  cam_proj.(105).cnf.cdb  cam_proj.(106).cnf.cdb  cam_proj.(107).cnf.hdb  cam_proj.(109).cnf.hdb  cam_proj.(11).cnf.hdb  cam_proj.(110).cnf.cdb  cam_proj.(111).cnf.cdb  cam_proj.(112).cnf.hdb  cam_proj.(113).cnf.cdb  cam_proj.(115).cnf.cdb  cam_proj.(117).cnf.cdb  cam_proj.(118).cnf.cdb  cam_proj.(118).cnf.hdb  cam_proj.(119).cnf.cdb  cam_proj.(12).cnf.cdb  cam_proj.(12).cnf.hdb  cam_proj.(120).cnf.cdb  cam_proj.(120).cnf.hdb  cam_proj.(13).cnf.cdb  cam_proj.(13).cnf.hdb  (+129 more)
verilog/imp/incremental_db/compiled_partitions/: cam_proj.db_info  cam_proj.root_partition.cmp.ammdb  cam_proj.root_partition.cmp.cdb  cam_proj.root_partition.cmp.hdb  cam_proj.root_partition.cmp.rcfdb  cam_proj.root_partition.map.hbdb.sig  cam_proj.root_partition.map.hdb  cam_proj.root_partition.map.kpt
verilog/imp/output_files/: cam_proj.cdf  cam_proj.done  cam_proj.fit.rpt  cam_proj.flow.rpt  cam_proj.pof  cam_proj.pti_db_list.ddb  cam_proj.sof  cam_proj.tis_db_list.ddb
